# PredictiveMaintenance

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: de23e7e58e8f_create_machines_and_sensor_data_tables.py
config/: database.py  logging.py  settings.py
core/models/: __init__.py  machine.py  sensor_data.py
core/repository/: __init__.py  machine.py  sensor_data.py
core/schemas/: __init__.py  sensor_data.py
pipeline/db/: schema.py
pipeline/models/: __init__.py  machine.py  sensor_data.py
pipeline/schemas/: machine.py  sensor_data.py
simulator/: go.mod  go.sum
simulator/internal/sensor/: generator.go
simulator/pkg/models/: sensor_data.go
