[project]
name = "predictivemaintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
pipeline = [
    "confluent-kafka>=2.15.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-timescaledb>=0.4.1",
]
ml = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "mlflow>=1.27.0",
    "optuna>=4.9.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
    "xgboost>=3.3.0",
]
api = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
]
dashboard = [
    "plotly>=6.9.0",
    "streamlit>=1.60.0",
]
